migrate to gettext java class to java source generation; cleanup